[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "microcosm-substrate"
version = "0.1.0"
description = "repo -> .microcosm: turn any folder into an inspectable work substrate."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["agent-runtime", "developer-tools", "microcosm", "observability", "substrate"]
authors = [
  { name = "Microcosm Substrate Contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[project.urls]
Homepage = "https://github.com/wcook04/microcosm-substrate"
Documentation = "https://github.com/wcook04/microcosm-substrate/blob/main/README.md"
Source = "https://github.com/wcook04/microcosm-substrate"
Issues = "https://github.com/wcook04/microcosm-substrate/issues"
Repository = "https://github.com/wcook04/microcosm-substrate"

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "requests>=2,<3"
]

[project.scripts]
microcosm = "microcosm_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/microcosm-substrate" = [
  ".gitignore",
  "AGENTS.md",
  "ANTI_PRINCIPLES.md",
  "AXIOMS.md",
  "CONSTITUTION.md",
  "CONTRIBUTING.md",
  "LICENSE",
  "MANIFEST.in",
  "Makefile",
  "PRINCIPLES.md",
  "QUICKSTART.md",
  "README.md",
  "SECURITY.md",
  "bootstrap.sh",
  "pyproject.toml"
]
"share/microcosm-substrate/.github/workflows" = [".github/workflows/*.yml"]
"share/microcosm-substrate/atlas" = ["atlas/*.json"]
"share/microcosm-substrate/core" = ["core/*.json"]
"share/microcosm-substrate/core/acceptance" = ["core/acceptance/*.json"]
"share/microcosm-substrate/core/fixture_manifests" = ["core/fixture_manifests/*.json"]
"share/microcosm-substrate/core/preflight_support" = ["core/preflight_support/*.json"]
"share/microcosm-substrate/fixtures/first_wave/agent_benchmark_integrity_anti_gaming_replay/input" = ["fixtures/first_wave/agent_benchmark_integrity_anti_gaming_replay/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/agent_memory_temporal_conflict_replay/input" = ["fixtures/first_wave/agent_memory_temporal_conflict_replay/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/agent_monitor_redteam_falsification_replay/input" = ["fixtures/first_wave/agent_monitor_redteam_falsification_replay/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/agent_route_observability_runtime/computer_use_action_trace_replay_input" = ["fixtures/first_wave/agent_route_observability_runtime/computer_use_action_trace_replay_input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/agent_route_observability_runtime/input" = ["fixtures/first_wave/agent_route_observability_runtime/input/*.json", "fixtures/first_wave/agent_route_observability_runtime/input/*.jsonl"]
"share/microcosm-substrate/fixtures/first_wave/agent_sabotage_scheming_monitor_replay" = ["fixtures/first_wave/agent_sabotage_scheming_monitor_replay/*.json"]
"share/microcosm-substrate/fixtures/first_wave/agent_sabotage_scheming_monitor_replay/input" = ["fixtures/first_wave/agent_sabotage_scheming_monitor_replay/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/agent_sandbox_policy_escape_replay" = ["fixtures/first_wave/agent_sandbox_policy_escape_replay/*.json"]
"share/microcosm-substrate/fixtures/first_wave/agent_sandbox_policy_escape_replay/input" = ["fixtures/first_wave/agent_sandbox_policy_escape_replay/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/agentic_vulnerability_discovery_patch_proof_replay" = ["fixtures/first_wave/agentic_vulnerability_discovery_patch_proof_replay/*.json"]
"share/microcosm-substrate/fixtures/first_wave/agentic_vulnerability_discovery_patch_proof_replay/input" = ["fixtures/first_wave/agentic_vulnerability_discovery_patch_proof_replay/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/belief_state_process_reward_replay" = ["fixtures/first_wave/belief_state_process_reward_replay/*.json"]
"share/microcosm-substrate/fixtures/first_wave/belief_state_process_reward_replay/input" = ["fixtures/first_wave/belief_state_process_reward_replay/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/certificate_kernel_execution_lab/input" = ["fixtures/first_wave/certificate_kernel_execution_lab/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/certificate_kernel_execution_lab/input/lake_project" = ["fixtures/first_wave/certificate_kernel_execution_lab/input/lake_project/*.lean"]
"share/microcosm-substrate/fixtures/first_wave/certificate_kernel_execution_lab/input/lake_project/MicrocosmCertificateLab" = ["fixtures/first_wave/certificate_kernel_execution_lab/input/lake_project/MicrocosmCertificateLab/*.lean"]
"share/microcosm-substrate/fixtures/first_wave/cold_reader_route_map/input" = ["fixtures/first_wave/cold_reader_route_map/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/corpus_readiness_mathlib_absence_gate/input" = ["fixtures/first_wave/corpus_readiness_mathlib_absence_gate/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/durable_agent_work_landing_replay/input" = ["fixtures/first_wave/durable_agent_work_landing_replay/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/executable_doctrine_grammar/input" = ["fixtures/first_wave/executable_doctrine_grammar/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/executable_doctrine_grammar/input/paper_modules" = ["fixtures/first_wave/executable_doctrine_grammar/input/paper_modules/*.md"]
"share/microcosm-substrate/fixtures/first_wave/formal_evidence_cell_anchor_resolver/input" = ["fixtures/first_wave/formal_evidence_cell_anchor_resolver/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/formal_math_lean_proof_witness/input" = ["fixtures/first_wave/formal_math_lean_proof_witness/input/*.json", "fixtures/first_wave/formal_math_lean_proof_witness/input/*.lean"]
"share/microcosm-substrate/fixtures/first_wave/formal_math_lean_proof_witness/input/lake_project" = ["fixtures/first_wave/formal_math_lean_proof_witness/input/lake_project/*.lean"]
"share/microcosm-substrate/fixtures/first_wave/formal_math_lean_proof_witness/input/lake_project/MicrocosmProofWitness" = ["fixtures/first_wave/formal_math_lean_proof_witness/input/lake_project/MicrocosmProofWitness/*.lean"]
"share/microcosm-substrate/fixtures/first_wave/formal_math_premise_retrieval/input" = ["fixtures/first_wave/formal_math_premise_retrieval/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/formal_math_readiness_gate/input" = ["fixtures/first_wave/formal_math_readiness_gate/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/formal_math_verifier_trace_repair_loop/input" = ["fixtures/first_wave/formal_math_verifier_trace_repair_loop/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/indirect_prompt_injection_information_flow_policy_replay" = ["fixtures/first_wave/indirect_prompt_injection_information_flow_policy_replay/*.json"]
"share/microcosm-substrate/fixtures/first_wave/indirect_prompt_injection_information_flow_policy_replay/input" = ["fixtures/first_wave/indirect_prompt_injection_information_flow_policy_replay/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/lean_std_premise_index/input" = ["fixtures/first_wave/lean_std_premise_index/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/macro_projection_import_protocol/input" = ["fixtures/first_wave/macro_projection_import_protocol/input/*.json", "fixtures/first_wave/macro_projection_import_protocol/input/*.jsonl"]
"share/microcosm-substrate/fixtures/first_wave/materials_chemistry_closed_loop_lab_safety_replay/input" = ["fixtures/first_wave/materials_chemistry_closed_loop_lab_safety_replay/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/mathematical_strategy_atlas_hypothesis_scorer/input" = ["fixtures/first_wave/mathematical_strategy_atlas_hypothesis_scorer/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/mathematical_strategy_atlas_hypothesis_scorer/input/source_artifacts/codex/standards" = ["fixtures/first_wave/mathematical_strategy_atlas_hypothesis_scorer/input/source_artifacts/codex/standards/*.json"]
"share/microcosm-substrate/fixtures/first_wave/mathematical_strategy_atlas_hypothesis_scorer/input/source_artifacts/state/runs/PROVER_PROVIDER_CONTEXT_SWEEP_20260510_v0/local_foundry_baseline/problems/strategy_nat_succ_injective/artifacts" = ["fixtures/first_wave/mathematical_strategy_atlas_hypothesis_scorer/input/source_artifacts/state/runs/PROVER_PROVIDER_CONTEXT_SWEEP_20260510_v0/local_foundry_baseline/problems/strategy_nat_succ_injective/artifacts/*.json"]
"share/microcosm-substrate/fixtures/first_wave/mathematical_strategy_atlas_hypothesis_scorer/input/source_artifacts/system/server/tests" = ["fixtures/first_wave/mathematical_strategy_atlas_hypothesis_scorer/input/source_artifacts/system/server/tests/*.py"]
"share/microcosm-substrate/fixtures/first_wave/mathematical_strategy_atlas_hypothesis_scorer/input/source_artifacts/tools/meta/factory" = ["fixtures/first_wave/mathematical_strategy_atlas_hypothesis_scorer/input/source_artifacts/tools/meta/factory/*.py"]
"share/microcosm-substrate/fixtures/first_wave/mcp_tool_authority_replay/input" = ["fixtures/first_wave/mcp_tool_authority_replay/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/mechanistic_interpretability_circuit_attribution_replay/input" = ["fixtures/first_wave/mechanistic_interpretability_circuit_attribution_replay/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/mechanistic_interpretability_circuit_attribution_replay/input/source_modules/codex/nodes/oracle" = ["fixtures/first_wave/mechanistic_interpretability_circuit_attribution_replay/input/source_modules/codex/nodes/oracle/*.json"]
"share/microcosm-substrate/fixtures/first_wave/mechanistic_interpretability_circuit_attribution_replay/input/source_modules/codex/standards" = ["fixtures/first_wave/mechanistic_interpretability_circuit_attribution_replay/input/source_modules/codex/standards/*.json"]
"share/microcosm-substrate/fixtures/first_wave/mechanistic_interpretability_circuit_attribution_replay/input/source_modules/codex/substrate/nodes/oracle" = ["fixtures/first_wave/mechanistic_interpretability_circuit_attribution_replay/input/source_modules/codex/substrate/nodes/oracle/*.json"]
"share/microcosm-substrate/fixtures/first_wave/mechanistic_interpretability_circuit_attribution_replay/input/source_modules/macro_state/microcosm_portfolio" = ["fixtures/first_wave/mechanistic_interpretability_circuit_attribution_replay/input/source_modules/macro_state/microcosm_portfolio/*.jsonl"]
"share/microcosm-substrate/fixtures/first_wave/mechanistic_interpretability_circuit_attribution_replay/input/source_modules/macro_state/microcosm_portfolio/reconstruction" = ["fixtures/first_wave/mechanistic_interpretability_circuit_attribution_replay/input/source_modules/macro_state/microcosm_portfolio/reconstruction/*.json", "fixtures/first_wave/mechanistic_interpretability_circuit_attribution_replay/input/source_modules/macro_state/microcosm_portfolio/reconstruction/*.py"]
"share/microcosm-substrate/fixtures/first_wave/mechanistic_interpretability_circuit_attribution_replay/input/source_modules/system/lib" = ["fixtures/first_wave/mechanistic_interpretability_circuit_attribution_replay/input/source_modules/system/lib/*.py"]
"share/microcosm-substrate/fixtures/first_wave/mechanistic_interpretability_circuit_attribution_replay/input/source_modules/tools/meta/control" = ["fixtures/first_wave/mechanistic_interpretability_circuit_attribution_replay/input/source_modules/tools/meta/control/*.py"]
"share/microcosm-substrate/fixtures/first_wave/mission_transaction_work_spine/input" = ["fixtures/first_wave/mission_transaction_work_spine/input/*.json", "fixtures/first_wave/mission_transaction_work_spine/input/*.jsonl"]
"share/microcosm-substrate/fixtures/first_wave/navigation_hologram_route_plane/input" = ["fixtures/first_wave/navigation_hologram_route_plane/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/pattern_assimilation_step/input" = ["fixtures/first_wave/pattern_assimilation_step/input/*.json", "fixtures/first_wave/pattern_assimilation_step/input/*.jsonl"]
"share/microcosm-substrate/fixtures/first_wave/pattern_binding_contract/input" = ["fixtures/first_wave/pattern_binding_contract/input/*.json", "fixtures/first_wave/pattern_binding_contract/input/*.jsonl"]
"share/microcosm-substrate/fixtures/first_wave/prediction_oracle_reconciliation/input" = ["fixtures/first_wave/prediction_oracle_reconciliation/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/proof_derived_governed_mutation_authorization/input" = ["fixtures/first_wave/proof_derived_governed_mutation_authorization/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/proof_diagnostic_evidence_spine/input" = ["fixtures/first_wave/proof_diagnostic_evidence_spine/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/provider_context_recipe_budget_policy/input" = ["fixtures/first_wave/provider_context_recipe_budget_policy/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/provider_context_recipe_budget_policy/input/source_modules/codex/standards" = ["fixtures/first_wave/provider_context_recipe_budget_policy/input/source_modules/codex/standards/*.json"]
"share/microcosm-substrate/fixtures/first_wave/provider_context_recipe_budget_policy/input/source_modules/tools/meta/factory" = ["fixtures/first_wave/provider_context_recipe_budget_policy/input/source_modules/tools/meta/factory/*.py"]
"share/microcosm-substrate/fixtures/first_wave/public_reveal_walkthrough/input" = ["fixtures/first_wave/public_reveal_walkthrough/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/research_replication_rubric_artifact_replay/input" = ["fixtures/first_wave/research_replication_rubric_artifact_replay/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/ring2_premise_retrieval_precision_recall_harness/input" = ["fixtures/first_wave/ring2_premise_retrieval_precision_recall_harness/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/ring2_premise_retrieval_precision_recall_harness/input/source_artifacts/state/runs/PROVER_BENCHMARK_RING2_20260510_premise_retrieval_v0" = ["fixtures/first_wave/ring2_premise_retrieval_precision_recall_harness/input/source_artifacts/state/runs/PROVER_BENCHMARK_RING2_20260510_premise_retrieval_v0/*.json"]
"share/microcosm-substrate/fixtures/first_wave/ring2_premise_retrieval_precision_recall_harness/input/source_artifacts/state/runs/PROVER_BENCHMARK_RING2_20260510_premise_retrieval_v0/premise_retrieval_graph_v0" = ["fixtures/first_wave/ring2_premise_retrieval_precision_recall_harness/input/source_artifacts/state/runs/PROVER_BENCHMARK_RING2_20260510_premise_retrieval_v0/premise_retrieval_graph_v0/*.json"]
"share/microcosm-substrate/fixtures/first_wave/sleeper_memory_poisoning_quarantine_replay/input" = ["fixtures/first_wave/sleeper_memory_poisoning_quarantine_replay/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/spatial_world_model_counterfactual_simulation_replay/input" = ["fixtures/first_wave/spatial_world_model_counterfactual_simulation_replay/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/standards_meta_diagnostics/input" = ["fixtures/first_wave/standards_meta_diagnostics/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/tactic_portfolio_availability_probe/input" = ["fixtures/first_wave/tactic_portfolio_availability_probe/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/tactic_portfolio_availability_probe/input/source_artifacts/state/runs/PROVER_PROOF_STATE_SEARCH_CURRICULUM_20260511_v0_smoke" = ["fixtures/first_wave/tactic_portfolio_availability_probe/input/source_artifacts/state/runs/PROVER_PROOF_STATE_SEARCH_CURRICULUM_20260511_v0_smoke/*.json"]
"share/microcosm-substrate/fixtures/first_wave/tactic_portfolio_availability_probe/input/source_artifacts/state/runs/PROVER_PROOF_STATE_SEARCH_CURRICULUM_20260511_v0_smoke/tactic_affordance_probe/portfolio_core_v0" = ["fixtures/first_wave/tactic_portfolio_availability_probe/input/source_artifacts/state/runs/PROVER_PROOF_STATE_SEARCH_CURRICULUM_20260511_v0_smoke/tactic_affordance_probe/portfolio_core_v0/*.json"]
"share/microcosm-substrate/fixtures/first_wave/tactic_portfolio_availability_probe/input/source_artifacts/tactic_affordance_probe" = ["fixtures/first_wave/tactic_portfolio_availability_probe/input/source_artifacts/tactic_affordance_probe/*.lean"]
"share/microcosm-substrate/fixtures/first_wave/tactic_portfolio_availability_probe/input/source_artifacts/tactic_affordance_probe/portfolio_core_v0" = ["fixtures/first_wave/tactic_portfolio_availability_probe/input/source_artifacts/tactic_affordance_probe/portfolio_core_v0/*.lean"]
"share/microcosm-substrate/fixtures/first_wave/target_shape_tactic_routing_gate/input" = ["fixtures/first_wave/target_shape_tactic_routing_gate/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/target_shape_tactic_routing_gate/input/source_artifacts/state/runs/PROVER_BENCHMARK_RING2_20260510_premise_retrieval_v0/oracle_repair_graph_v0" = ["fixtures/first_wave/target_shape_tactic_routing_gate/input/source_artifacts/state/runs/PROVER_BENCHMARK_RING2_20260510_premise_retrieval_v0/oracle_repair_graph_v0/*.json"]
"share/microcosm-substrate/fixtures/first_wave/target_shape_tactic_routing_gate/input/source_artifacts/state/runs/PROVER_BENCHMARK_RING2_20260510_premise_retrieval_v0/premise_retrieval_graph_v0" = ["fixtures/first_wave/target_shape_tactic_routing_gate/input/source_artifacts/state/runs/PROVER_BENCHMARK_RING2_20260510_premise_retrieval_v0/premise_retrieval_graph_v0/*.json"]
"share/microcosm-substrate/fixtures/first_wave/undeclared_library_prior_symbol_classifier/input" = ["fixtures/first_wave/undeclared_library_prior_symbol_classifier/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/verifier_lab_execution_spine/input" = ["fixtures/first_wave/verifier_lab_execution_spine/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/verifier_lab_execution_spine/input/lake_project" = ["fixtures/first_wave/verifier_lab_execution_spine/input/lake_project/*.lean"]
"share/microcosm-substrate/fixtures/first_wave/verifier_lab_execution_spine/input/lake_project/MicrocosmProofWitness" = ["fixtures/first_wave/verifier_lab_execution_spine/input/lake_project/MicrocosmProofWitness/*.lean"]
"share/microcosm-substrate/fixtures/first_wave/verifier_lab_kernel/input" = ["fixtures/first_wave/verifier_lab_kernel/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/voice_to_doctrine_self_improvement_loop/input" = ["fixtures/first_wave/voice_to_doctrine_self_improvement_loop/input/*.json"]
"share/microcosm-substrate/fixtures/first_wave/world_model_projection_drift_control_room/input" = ["fixtures/first_wave/world_model_projection_drift_control_room/input/*.json"]
"share/microcosm-substrate/fixtures/second_wave/bridge_phase_continuity_runtime/input" = ["fixtures/second_wave/bridge_phase_continuity_runtime/input/*.json", "fixtures/second_wave/bridge_phase_continuity_runtime/input/*.jsonl"]
"share/microcosm-substrate/paper_modules" = ["paper_modules/*.md"]
"share/microcosm-substrate/scripts" = ["scripts/*.py"]
"share/microcosm-substrate/skills" = ["skills/*.md"]
"share/microcosm-substrate/standards" = ["standards/*.json"]
"share/microcosm-substrate/receipts/acceptance" = ["receipts/acceptance/*.json", "receipts/acceptance/pattern_assimilation_step"]
"share/microcosm-substrate/receipts/acceptance/first_wave" = ["receipts/acceptance/first_wave/*.json"]
"share/microcosm-substrate/receipts/runtime_shell" = ["receipts/runtime_shell/*.json"]
"share/microcosm-substrate/receipts/first_wave/agent_route_observability_runtime" = ["receipts/first_wave/agent_route_observability_runtime/*.json"]
"share/microcosm-substrate/receipts/first_wave/executable_doctrine_grammar" = ["receipts/first_wave/executable_doctrine_grammar/*.json"]
"share/microcosm-substrate/receipts/first_wave/mission_transaction_work_spine" = ["receipts/first_wave/mission_transaction_work_spine/*.json"]
"share/microcosm-substrate/receipts/first_wave/navigation_hologram_route_plane" = ["receipts/first_wave/navigation_hologram_route_plane/*.json"]
"share/microcosm-substrate/receipts/first_wave/pattern_assimilation_step" = ["receipts/first_wave/pattern_assimilation_step/*.json"]
"share/microcosm-substrate/receipts/first_wave/pattern_binding_contract" = ["receipts/first_wave/pattern_binding_contract/*.json"]
"share/microcosm-substrate/receipts/first_wave/proof_diagnostic_evidence_spine" = ["receipts/first_wave/proof_diagnostic_evidence_spine/*.json"]
"share/microcosm-substrate/receipts/first_wave/corpus_readiness_mathlib_absence_gate" = ["receipts/first_wave/corpus_readiness_mathlib_absence_gate/*.json"]
"share/microcosm-substrate/receipts/first_wave/formal_evidence_cell_anchor_resolver" = ["receipts/first_wave/formal_evidence_cell_anchor_resolver/*.json"]
"share/microcosm-substrate/receipts/first_wave/formal_math_lean_proof_witness" = ["receipts/first_wave/formal_math_lean_proof_witness/*.json"]
"share/microcosm-substrate/receipts/first_wave/formal_math_premise_retrieval" = ["receipts/first_wave/formal_math_premise_retrieval/*.json"]
"share/microcosm-substrate/receipts/first_wave/formal_math_readiness_gate" = ["receipts/first_wave/formal_math_readiness_gate/*.json"]
"share/microcosm-substrate/receipts/first_wave/formal_math_verifier_trace_repair_loop" = ["receipts/first_wave/formal_math_verifier_trace_repair_loop/*.json"]
"share/microcosm-substrate/receipts/first_wave/lean_std_premise_index" = ["receipts/first_wave/lean_std_premise_index/*.json"]
"share/microcosm-substrate/receipts/first_wave/ring2_premise_retrieval_precision_recall_harness" = ["receipts/first_wave/ring2_premise_retrieval_precision_recall_harness/*.json"]
"share/microcosm-substrate/receipts/first_wave/tactic_portfolio_availability_probe" = ["receipts/first_wave/tactic_portfolio_availability_probe/*.json"]
"share/microcosm-substrate/receipts/first_wave/target_shape_tactic_routing_gate" = ["receipts/first_wave/target_shape_tactic_routing_gate/*.json"]
"share/microcosm-substrate/receipts/first_wave/verifier_lab_execution_spine" = ["receipts/first_wave/verifier_lab_execution_spine/*.json"]
"share/microcosm-substrate/receipts/first_wave/verifier_lab_kernel" = ["receipts/first_wave/verifier_lab_kernel/*.json"]
"share/microcosm-substrate/receipts/first_wave/prediction_oracle_reconciliation" = ["receipts/first_wave/prediction_oracle_reconciliation/*.json"]
"share/microcosm-substrate/receipts/first_wave/spatial_world_model_counterfactual_simulation_replay" = ["receipts/first_wave/spatial_world_model_counterfactual_simulation_replay/*.json"]
"share/microcosm-substrate/receipts/first_wave/mechanistic_interpretability_circuit_attribution_replay" = ["receipts/first_wave/mechanistic_interpretability_circuit_attribution_replay/*.json"]
"share/microcosm-substrate/receipts/first_wave/standards_meta_diagnostics" = ["receipts/first_wave/standards_meta_diagnostics/*.json"]
"share/microcosm-substrate/receipts/first_wave/agent_monitor_redteam_falsification_replay" = ["receipts/first_wave/agent_monitor_redteam_falsification_replay/*.json"]
"share/microcosm-substrate/receipts/first_wave/agent_sabotage_scheming_monitor_replay" = ["receipts/first_wave/agent_sabotage_scheming_monitor_replay/*.json"]
"share/microcosm-substrate/examples/pattern_binding_contract/exported_route_readiness_bundle" = ["examples/pattern_binding_contract/exported_route_readiness_bundle/*.json", "examples/pattern_binding_contract/exported_route_readiness_bundle/*.jsonl", "examples/pattern_binding_contract/exported_route_readiness_bundle/*.md"]
"share/microcosm-substrate/examples/pattern_binding_contract/exported_substrate_bundle" = ["examples/pattern_binding_contract/exported_substrate_bundle/*.json", "examples/pattern_binding_contract/exported_substrate_bundle/*.jsonl"]
"share/microcosm-substrate/examples/pattern_binding_contract/exported_substrate_bundle/source_artifacts/macro_standard/codex/standards" = ["examples/pattern_binding_contract/exported_substrate_bundle/source_artifacts/macro_standard/codex/standards/*.json"]
"share/microcosm-substrate/examples/pattern_binding_contract/exported_substrate_bundle/source_artifacts/macro_state/microcosm_portfolio" = ["examples/pattern_binding_contract/exported_substrate_bundle/source_artifacts/macro_state/microcosm_portfolio/*.jsonl"]
"share/microcosm-substrate/examples/pattern_binding_contract/exported_substrate_bundle/source_artifacts/macro_state/microcosm_portfolio/reconstruction" = ["examples/pattern_binding_contract/exported_substrate_bundle/source_artifacts/macro_state/microcosm_portfolio/reconstruction/*.json"]
"share/microcosm-substrate/examples/pattern_binding_contract/exported_substrate_bundle/source_artifacts/macro_tool/tools/meta/factory" = ["examples/pattern_binding_contract/exported_substrate_bundle/source_artifacts/macro_tool/tools/meta/factory/*.py"]
"share/microcosm-substrate/examples/corpus_readiness_mathlib_absence_gate/exported_corpus_readiness_bundle" = ["examples/corpus_readiness_mathlib_absence_gate/exported_corpus_readiness_bundle/*.json"]
"share/microcosm-substrate/examples/formal_math_readiness_gate/exported_formal_math_readiness_bundle" = ["examples/formal_math_readiness_gate/exported_formal_math_readiness_bundle/*.json"]
"share/microcosm-substrate/examples/lean_std_premise_index/exported_lean_std_premise_index_bundle" = ["examples/lean_std_premise_index/exported_lean_std_premise_index_bundle/*.json"]
"share/microcosm-substrate/examples/lean_std_premise_index/exported_lean_std_premise_index_bundle/source_modules/ring2_runs/PROVER_BENCHMARK_RING2_20260510_premise_retrieval_v0" = ["examples/lean_std_premise_index/exported_lean_std_premise_index_bundle/source_modules/ring2_runs/PROVER_BENCHMARK_RING2_20260510_premise_retrieval_v0/*.json"]
"share/microcosm-substrate/examples/formal_math_premise_retrieval/exported_premise_retrieval_bundle" = ["examples/formal_math_premise_retrieval/exported_premise_retrieval_bundle/*.json"]
"share/microcosm-substrate/examples/ring2_premise_retrieval_precision_recall_harness/exported_ring2_precision_recall_bundle" = ["examples/ring2_premise_retrieval_precision_recall_harness/exported_ring2_precision_recall_bundle/*.json"]
"share/microcosm-substrate/examples/tactic_portfolio_availability_probe/exported_tactic_portfolio_availability_bundle" = ["examples/tactic_portfolio_availability_probe/exported_tactic_portfolio_availability_bundle/*.json"]
"share/microcosm-substrate/examples/tactic_portfolio_availability_probe/exported_tactic_portfolio_availability_bundle/source_artifacts/tactic_affordance_probe" = ["examples/tactic_portfolio_availability_probe/exported_tactic_portfolio_availability_bundle/source_artifacts/tactic_affordance_probe/*.lean"]
"share/microcosm-substrate/examples/tactic_portfolio_availability_probe/exported_tactic_portfolio_availability_bundle/source_artifacts/tactic_affordance_probe/portfolio_core_v0" = ["examples/tactic_portfolio_availability_probe/exported_tactic_portfolio_availability_bundle/source_artifacts/tactic_affordance_probe/portfolio_core_v0/*.lean"]
"share/microcosm-substrate/examples/target_shape_tactic_routing_gate/exported_target_shape_tactic_routing_bundle" = ["examples/target_shape_tactic_routing_gate/exported_target_shape_tactic_routing_bundle/*.json"]
"share/microcosm-substrate/examples/formal_math_verifier_trace_repair_loop/exported_verifier_trace_repair_bundle" = ["examples/formal_math_verifier_trace_repair_loop/exported_verifier_trace_repair_bundle/*.json"]
"share/microcosm-substrate/examples/formal_math_verifier_trace_repair_loop/exported_verifier_trace_repair_bundle/source_modules/ring2_runs/PROVER_BENCHMARK_RING2_20260510_premise_retrieval_v0" = ["examples/formal_math_verifier_trace_repair_loop/exported_verifier_trace_repair_bundle/source_modules/ring2_runs/PROVER_BENCHMARK_RING2_20260510_premise_retrieval_v0/*.json"]
"share/microcosm-substrate/examples/formal_math_verifier_trace_repair_loop/exported_verifier_trace_repair_bundle/source_modules/ring2_runs/PROVER_BENCHMARK_RING2_20260510_premise_retrieval_v0/premise_retrieval_graph_v0" = ["examples/formal_math_verifier_trace_repair_loop/exported_verifier_trace_repair_bundle/source_modules/ring2_runs/PROVER_BENCHMARK_RING2_20260510_premise_retrieval_v0/premise_retrieval_graph_v0/*.json"]
"share/microcosm-substrate/examples/formal_math_verifier_trace_repair_loop/exported_verifier_trace_repair_bundle/source_modules/ring2_runs/PROVER_BENCHMARK_RING2_20260510_premise_retrieval_v0/oracle_repair_graph_v0" = ["examples/formal_math_verifier_trace_repair_loop/exported_verifier_trace_repair_bundle/source_modules/ring2_runs/PROVER_BENCHMARK_RING2_20260510_premise_retrieval_v0/oracle_repair_graph_v0/*.json"]
"share/microcosm-substrate/examples/formal_evidence_cell_anchor_resolver/exported_evidence_cell_anchor_bundle" = ["examples/formal_evidence_cell_anchor_resolver/exported_evidence_cell_anchor_bundle/*.json"]
"share/microcosm-substrate/examples/formal_evidence_cell_anchor_resolver/exported_evidence_cell_anchor_bundle/source_modules/codex/standards" = ["examples/formal_evidence_cell_anchor_resolver/exported_evidence_cell_anchor_bundle/source_modules/codex/standards/*.json"]
"share/microcosm-substrate/examples/formal_evidence_cell_anchor_resolver/exported_evidence_cell_anchor_bundle/source_modules/state_sidecars/formal_math_research_operations" = ["examples/formal_evidence_cell_anchor_resolver/exported_evidence_cell_anchor_bundle/source_modules/state_sidecars/formal_math_research_operations/*.json"]
"share/microcosm-substrate/examples/formal_evidence_cell_anchor_resolver/exported_evidence_cell_anchor_bundle/source_modules/system/lib" = ["examples/formal_evidence_cell_anchor_resolver/exported_evidence_cell_anchor_bundle/source_modules/system/lib/*.py"]
"share/microcosm-substrate/examples/formal_math_lean_proof_witness/exported_lean_proof_witness_bundle" = ["examples/formal_math_lean_proof_witness/exported_lean_proof_witness_bundle/*.json"]
"share/microcosm-substrate/examples/formal_math_lean_proof_witness/exported_lean_proof_witness_bundle/lake_project" = ["examples/formal_math_lean_proof_witness/exported_lean_proof_witness_bundle/lake_project/*.lean"]
"share/microcosm-substrate/examples/formal_math_lean_proof_witness/exported_lean_proof_witness_bundle/lake_project/MicrocosmProofWitness" = ["examples/formal_math_lean_proof_witness/exported_lean_proof_witness_bundle/lake_project/MicrocosmProofWitness/*.lean"]
"share/microcosm-substrate/examples/verifier_lab_kernel/exported_verifier_lab_kernel_bundle" = ["examples/verifier_lab_kernel/exported_verifier_lab_kernel_bundle/*.json"]
"share/microcosm-substrate/examples/verifier_lab_kernel/exported_verifier_lab_kernel_bundle/source_modules/microcosm_core/organs" = ["examples/verifier_lab_kernel/exported_verifier_lab_kernel_bundle/source_modules/microcosm_core/organs/*.py"]
"share/microcosm-substrate/examples/verifier_lab_execution_spine/exported_verifier_lab_execution_spine_bundle" = ["examples/verifier_lab_execution_spine/exported_verifier_lab_execution_spine_bundle/*.json"]
"share/microcosm-substrate/examples/verifier_lab_execution_spine/exported_verifier_lab_execution_spine_bundle/lake_project" = ["examples/verifier_lab_execution_spine/exported_verifier_lab_execution_spine_bundle/lake_project/*.lean"]
"share/microcosm-substrate/examples/verifier_lab_execution_spine/exported_verifier_lab_execution_spine_bundle/lake_project/MicrocosmProofWitness" = ["examples/verifier_lab_execution_spine/exported_verifier_lab_execution_spine_bundle/lake_project/MicrocosmProofWitness/*.lean"]
"share/microcosm-substrate/examples/verifier_lab_execution_spine/exported_verifier_lab_execution_spine_bundle/source_modules/microcosm_core/organs" = ["examples/verifier_lab_execution_spine/exported_verifier_lab_execution_spine_bundle/source_modules/microcosm_core/organs/*.py"]
"share/microcosm-substrate/examples/public_reveal_walkthrough/exported_public_reveal_bundle" = ["examples/public_reveal_walkthrough/exported_public_reveal_bundle/*.json"]
"share/microcosm-substrate/examples/public_reveal_walkthrough/exported_public_reveal_bundle/source_modules/ai_workflow/state/microcosm_portfolio/reconstruction" = ["examples/public_reveal_walkthrough/exported_public_reveal_bundle/source_modules/ai_workflow/state/microcosm_portfolio/reconstruction/*.json"]
"share/microcosm-substrate/examples/prediction_oracle_reconciliation/exported_prediction_oracle_bundle" = ["examples/prediction_oracle_reconciliation/exported_prediction_oracle_bundle/*.json"]
"share/microcosm-substrate/examples/prediction_oracle_reconciliation/exported_prediction_oracle_bundle/source_artifacts/macro_source/codex/substrate/contracts" = ["examples/prediction_oracle_reconciliation/exported_prediction_oracle_bundle/source_artifacts/macro_source/codex/substrate/contracts/*.json"]
"share/microcosm-substrate/examples/prediction_oracle_reconciliation/exported_prediction_oracle_bundle/source_artifacts/macro_source/codex/substrate/nodes/lab" = ["examples/prediction_oracle_reconciliation/exported_prediction_oracle_bundle/source_artifacts/macro_source/codex/substrate/nodes/lab/*.json"]
"share/microcosm-substrate/examples/prediction_oracle_reconciliation/exported_prediction_oracle_bundle/source_artifacts/macro_source/codex/substrate/nodes/oracle" = ["examples/prediction_oracle_reconciliation/exported_prediction_oracle_bundle/source_artifacts/macro_source/codex/substrate/nodes/oracle/*.json"]
"share/microcosm-substrate/examples/prediction_oracle_reconciliation/exported_prediction_oracle_bundle/source_artifacts/macro_source/tools/oracle" = ["examples/prediction_oracle_reconciliation/exported_prediction_oracle_bundle/source_artifacts/macro_source/tools/oracle/*.py"]
"share/microcosm-substrate/examples/prediction_oracle_reconciliation/exported_prediction_oracle_bundle/source_artifacts/macro_state/microcosm_portfolio" = ["examples/prediction_oracle_reconciliation/exported_prediction_oracle_bundle/source_artifacts/macro_state/microcosm_portfolio/*.json"]
"share/microcosm-substrate/examples/prediction_oracle_reconciliation/exported_prediction_oracle_bundle/source_artifacts/macro_state/microcosm_portfolio/extracted_patterns_ledger" = ["examples/prediction_oracle_reconciliation/exported_prediction_oracle_bundle/source_artifacts/macro_state/microcosm_portfolio/extracted_patterns_ledger/*.json"]
"share/microcosm-substrate/examples/agent_monitor_redteam_falsification_replay/exported_monitor_redteam_bundle" = ["examples/agent_monitor_redteam_falsification_replay/exported_monitor_redteam_bundle/*.json"]
"share/microcosm-substrate/examples/agent_monitor_redteam_falsification_replay/exported_monitor_redteam_bundle/source_artifacts/macro_state/microcosm_portfolio/extracted_patterns_ledger" = ["examples/agent_monitor_redteam_falsification_replay/exported_monitor_redteam_bundle/source_artifacts/macro_state/microcosm_portfolio/extracted_patterns_ledger/*.json"]
"share/microcosm-substrate/examples/agent_sabotage_scheming_monitor_replay/exported_sabotage_monitor_bundle" = ["examples/agent_sabotage_scheming_monitor_replay/exported_sabotage_monitor_bundle/*.json"]
"share/microcosm-substrate/examples/agent_sabotage_scheming_monitor_replay/exported_sabotage_monitor_bundle/source_artifacts/macro_state/microcosm_portfolio/extracted_patterns_ledger" = ["examples/agent_sabotage_scheming_monitor_replay/exported_sabotage_monitor_bundle/source_artifacts/macro_state/microcosm_portfolio/extracted_patterns_ledger/*.json"]
"share/microcosm-substrate/examples/spatial_world_model_counterfactual_simulation_replay/exported_spatial_world_model_simulation_bundle" = ["examples/spatial_world_model_counterfactual_simulation_replay/exported_spatial_world_model_simulation_bundle/*.json"]
"share/microcosm-substrate/examples/spatial_world_model_counterfactual_simulation_replay/exported_spatial_world_model_simulation_bundle/source_modules/system/server/tests" = ["examples/spatial_world_model_counterfactual_simulation_replay/exported_spatial_world_model_simulation_bundle/source_modules/system/server/tests/*.py"]
"share/microcosm-substrate/examples/spatial_world_model_counterfactual_simulation_replay/exported_spatial_world_model_simulation_bundle/source_modules/system/server/ui" = ["examples/spatial_world_model_counterfactual_simulation_replay/exported_spatial_world_model_simulation_bundle/source_modules/system/server/ui/*.json"]
"share/microcosm-substrate/examples/spatial_world_model_counterfactual_simulation_replay/exported_spatial_world_model_simulation_bundle/source_modules/tools/meta/factory" = ["examples/spatial_world_model_counterfactual_simulation_replay/exported_spatial_world_model_simulation_bundle/source_modules/tools/meta/factory/*.py"]
"share/microcosm-substrate/examples/mechanistic_interpretability_circuit_attribution_replay/exported_circuit_attribution_bundle" = ["examples/mechanistic_interpretability_circuit_attribution_replay/exported_circuit_attribution_bundle/*.json"]
"share/microcosm-substrate/examples/mechanistic_interpretability_circuit_attribution_replay/exported_circuit_attribution_bundle/source_modules/codex/nodes/oracle" = ["examples/mechanistic_interpretability_circuit_attribution_replay/exported_circuit_attribution_bundle/source_modules/codex/nodes/oracle/*.json"]
"share/microcosm-substrate/examples/mechanistic_interpretability_circuit_attribution_replay/exported_circuit_attribution_bundle/source_modules/codex/standards" = ["examples/mechanistic_interpretability_circuit_attribution_replay/exported_circuit_attribution_bundle/source_modules/codex/standards/*.json"]
"share/microcosm-substrate/examples/mechanistic_interpretability_circuit_attribution_replay/exported_circuit_attribution_bundle/source_modules/codex/substrate/nodes/oracle" = ["examples/mechanistic_interpretability_circuit_attribution_replay/exported_circuit_attribution_bundle/source_modules/codex/substrate/nodes/oracle/*.json"]
"share/microcosm-substrate/examples/mechanistic_interpretability_circuit_attribution_replay/exported_circuit_attribution_bundle/source_modules/macro_state/microcosm_portfolio" = ["examples/mechanistic_interpretability_circuit_attribution_replay/exported_circuit_attribution_bundle/source_modules/macro_state/microcosm_portfolio/*.jsonl"]
"share/microcosm-substrate/examples/mechanistic_interpretability_circuit_attribution_replay/exported_circuit_attribution_bundle/source_modules/macro_state/microcosm_portfolio/reconstruction" = ["examples/mechanistic_interpretability_circuit_attribution_replay/exported_circuit_attribution_bundle/source_modules/macro_state/microcosm_portfolio/reconstruction/*.json", "examples/mechanistic_interpretability_circuit_attribution_replay/exported_circuit_attribution_bundle/source_modules/macro_state/microcosm_portfolio/reconstruction/*.py"]
"share/microcosm-substrate/examples/mechanistic_interpretability_circuit_attribution_replay/exported_circuit_attribution_bundle/source_modules/system/lib" = ["examples/mechanistic_interpretability_circuit_attribution_replay/exported_circuit_attribution_bundle/source_modules/system/lib/*.py"]
"share/microcosm-substrate/examples/mechanistic_interpretability_circuit_attribution_replay/exported_circuit_attribution_bundle/source_modules/tools/meta/control" = ["examples/mechanistic_interpretability_circuit_attribution_replay/exported_circuit_attribution_bundle/source_modules/tools/meta/control/*.py"]
"share/microcosm-substrate/examples/standards_meta_diagnostics/exported_standards_meta_diagnostics_bundle" = ["examples/standards_meta_diagnostics/exported_standards_meta_diagnostics_bundle/*.json"]
"share/microcosm-substrate/examples/standards_meta_diagnostics/exported_standards_meta_diagnostics_bundle/source_modules/self-indexing-cognitive-substrate/microcosms/meta_diagnostics_workbench" = ["examples/standards_meta_diagnostics/exported_standards_meta_diagnostics_bundle/source_modules/self-indexing-cognitive-substrate/microcosms/meta_diagnostics_workbench/*.json"]
"share/microcosm-substrate/examples/standards_meta_diagnostics/exported_standards_meta_diagnostics_bundle/source_modules/self-indexing-cognitive-substrate/src/idea_microcosm" = ["examples/standards_meta_diagnostics/exported_standards_meta_diagnostics_bundle/source_modules/self-indexing-cognitive-substrate/src/idea_microcosm/*.py"]
"share/microcosm-substrate/examples/standards_meta_diagnostics/exported_standards_meta_diagnostics_bundle/source_modules/self-indexing-cognitive-substrate/tests" = ["examples/standards_meta_diagnostics/exported_standards_meta_diagnostics_bundle/source_modules/self-indexing-cognitive-substrate/tests/*.py"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/*.json", "examples/macro_projection_import_protocol/exported_projection_import_bundle/*.jsonl"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/*.py", "examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/*.yaml"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/.claude/hooks" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/.claude/hooks/*.py"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/.githooks" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/.githooks/*"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/codex/doctrine" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/codex/doctrine/*.json"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/codex/doctrine/paper_modules" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/codex/doctrine/paper_modules/*.md"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/codex/doctrine/skills/task_ledger" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/codex/doctrine/skills/task_ledger/*.md"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/codex/nodes/oracle" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/codex/nodes/oracle/*.json"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/codex/standards" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/codex/standards/*.json"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/codex/substrate/nodes/oracle" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/codex/substrate/nodes/oracle/*.json"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/self-indexing-cognitive-substrate/microcosms/executable_grammar_metabolism" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/self-indexing-cognitive-substrate/microcosms/executable_grammar_metabolism/*.json", "examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/self-indexing-cognitive-substrate/microcosms/executable_grammar_metabolism/*.md"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/system/lib" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/system/lib/*.py"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/system/lib/kernel" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/system/lib/kernel/*.py"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/system/lib/kernel/commands" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/system/lib/kernel/commands/*.py"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/system/server" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/system/server/*.py"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/system/server/tests" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/system/server/tests/*.py"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/system/server/tests/fixtures/b3_packet_lint" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/system/server/tests/fixtures/b3_packet_lint/*.txt"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/system/server/ui" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/system/server/ui/*.json"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/tools/agent_trace_structurer" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/tools/agent_trace_structurer/*.mjs"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/tools/meta/bridge" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/tools/meta/bridge/*.py"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/tools/meta/control" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/tools/meta/control/*.py"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/tools/meta/factory" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/tools/meta/factory/*.py"]
"share/microcosm-substrate/examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/tools/meta/observability" = ["examples/macro_projection_import_protocol/exported_projection_import_bundle/source_modules/tools/meta/observability/*.py"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
